fixed card spacing on portfolio page

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,10 +1,12 @@
 .project-container {
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap; */
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .cardStyle {
+    max-width: 350px;
     margin: 10px;
     border: solid;
     border-color: lightslategrey;
@@ -19,6 +21,7 @@
 
 @media (max-width: 700px) {
     .project-container {
+        max-width:100%;
         flex-direction: column;
     }
 }
